<resources>
    <string name="app_name">Client app</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Activity labels -->
    <string name="title_main_activity">Pickup Planner</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_travel">Pickup Service</string>
    <string name="title_activity_events">Events</string>

    <string name="welcome">Welcome!</string>
    <string name="events_selection">Select events of interest</string>
    <string name="book_reading">Library visit/book clubs</string>
    <string name="music_concert">Music/art concerts</string>
    <string name="games">Football games</string>
    <string name="submit_events_of_interest">Submit</string>
    <string name="where_to_travel">What would you like to do?</string>
    <string name="constraints_hint">Time constraints</string>
    <string name="location">Pickup location</string>
    <string name="location_default">Uppsala</string>

    <string name="action_settings">Settings</string>
    <string name="location_summary">Enter your preferred pickup location</string>
    <string name="event_day_today">Today</string>
    <string name="pref_event_day">event_day</string>
    <string name="pref_event_title">Choose</string>

    <string name="no_location_detected">No location detected</string>
    <string name="travel">Request travel service</string>
    <string name="attend_event">Attend event</string>
    <string name="use_current_location">Use my location</string>
    <string name="pickup_location">Pickup location</string>
    <string name="button_submit">Submit</string>
    <string name="choose_travel_date">Choose travel date</string>
    <string name="pick_time">Touch to pick travel time</string>
    <string name="default_travel_date">Today</string>
    <string name="submit_travel_request">Send request</string>
    <string name="select_destination">Choose travel destination</string>
    <string name="dst_library">Library</string>
    <string name="dst_airport">Airport</string>
    <string name="dst_shopping_mall">Shopping mall</string>

    <string name="date_today">Date: today</string>
    <string name="date_earliest_date">Date: earliest</string>

    <!-- Default pickup location in absence of user input -->
    <string name="default_pickup_location">Default: current location</string>
    <string name="no_date_selected">No date selected</string>
</resources>
