<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nicholasgot.clientapp.TravelActivityFragment"
    tools:showIn="@layout/activity_travel">

    <!--<TextView-->
        <!--android:id="@+id/location_text_view"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/pickup_location"-->
        <!--android:textSize="20sp"-->
        <!--/>-->


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="75dp">

        <com.nicholasgot.clientapp.autocomplete.CustomAutocompleteTextView
            android:id="@+id/pickupLocationTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/travelPlannerStartingPointTextField"
            android:layout_alignRight="@+id/travelPlannerStartingPointTextField"
            android:layout_below="@+id/travelPlannerStartingPointTextField"
            android:ems="10"
            android:textSize="20sp"
            android:hint="@string/pickup_location"
            android:inputType="textPostalAddress" />

        <!--<EditText-->
            <!--android:id="@+id/user_location_edit_text"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/use_current_location"-->
            <!--android:inputType="text"-->
            <!--android:imeOptions="actionDone"-->
            <!--android:textSize="20sp"-->
            <!--/>-->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_location_red_400_24dp"/>

        <!--fragment
            android:id="@+id/place_autocomplete_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"/-->

    </LinearLayout>

    <!--TextView
        android:id="@+id/text_view_choose_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:text="@string/choose_travel_date"/-->

    <!--LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/text_view_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/default_travel_date"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:onClick="showDatePickerDialog"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_date_range_pink_200_24dp"/>

    </LinearLayout-->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="5dip"
            android:text="@string/select_destination"/>

        <RadioGroup
            android:id="@+id/radio_select_destination"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/radio_airport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dst_airport"
                android:textSize="20sp"
                android:onClick="onRadioButtonClicked"
                />
            <RadioButton
                android:id="@+id/radio_library"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dst_library"
                android:textSize="20sp"
                android:onClick="onRadioButtonClicked"
                />
            <RadioButton
                android:id="@+id/radio_shopping_mall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dst_shopping_mall"
                android:textSize="20sp"
                android:onClick="onRadioButtonClicked"
                />
        </RadioGroup>

        <Spinner
            android:id="@+id/events_spinner"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Spinner
            android:id="@+id/dates_spinner"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            />

        <TextView
            android:id="@+id/text_view_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="5dip"
            />

        <TextView
            android:id="@+id/text_view_time"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/pick_time"
            android:textSize="20sp"
            android:padding="5dip"
            android:onClick="showTimePickerDialog"
            />
    </LinearLayout>

    <Button
        android:id="@+id/submit_travel_request"
        android:text="@string/submit_travel_request"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendRequestToDatabase"/>

</LinearLayout>
